--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "16.1.2",
     "pg": "^8.17.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
